--- a/calculator.html
+++ b/calculator.html
@@ -420,7 +420,8 @@
 
                 return makeErr(
                     ctx,
-                    `the operation ${vtToString(t1)} ${op.text} ${vtToString(t2)} doesn't exist yet`
+                    `the operation ${vtToString(t1)} ${op.text} ${vtToString(t2)} doesn't exist yet` 
+                        + ((t1 === VT_TENSOR && t2 === VT_NUMBER) || (t2 === VT_TENSOR && t1 === VT_NUMBER) ? " (hint: put [] around the number)" : "")
                 );
             }
 
@@ -2978,7 +2979,7 @@ i
 x := 2 * {
 	y := 0;
     for i := 0; i < 10; i = i+1 {
-        y = y + i
+        y += 1
     }
     y   // this here would be the last line of the block
 };
@@ -2986,7 +2987,7 @@ x := 2 * {
 x
 
 `,  
-                expected: "90",
+                expected: "20",
                 alwaysShow: true,
             },
             {
