Moved output view component to seperate file

--- a/calculator.html
+++ b/calculator.html
@@ -16,6 +16,9 @@
         <script src="./code-editor.js"></script>
         <link rel="stylesheet" href="code-editor.css">
 
+        <script src="./output-view.js"></script>
+        <link rel="stylesheet" href="output-view.css">
+
         <script src="./testing.js"></script>
         <link rel="stylesheet" href="testing.css">
 
